# P3D-Bench

./: .env.example  .gitignore  CITATION.cff  LICENSE  README.md  STRUCTURE.md  pyproject.toml
configs/: judge.yaml  models.yaml
configs/tasks/: assembly_3d_demo.yaml  image_to_3d_demo.yaml  text_to_3d_demo.yaml
data/: README.md
data/demo/targets/mesh/: p3d_assembly-3d_000000.stl  p3d_assembly-3d_000001.stl  p3d_assembly-3d_000002.stl  p3d_image-to-3d_000000.stl  p3d_image-to-3d_000001.stl  p3d_image-to-3d_000002.stl  p3d_text-to-3d_000000.stl  p3d_text-to-3d_000001.stl  p3d_text-to-3d_000002.stl
data/demo/targets/minimal-json/: p3d_text-to-3d_000000.json  p3d_text-to-3d_000001.json  (+1 more)
data/manifests/: assembly_3d_demo.jsonl  image_to_3d_demo.jsonl  text_to_3d_demo.jsonl
docs/: API.md  DATA.md  FORMATS.md  METRICS.md  TASKS.md
examples/: run_smoke.sh
p3dbench/: __init__.py  cli.py  config.py  pipeline.py  registry.py
p3dbench/compile/: __init__.py  exporter.py  sandbox.py  step_mesh.py  text2cad_interpreter.py
p3dbench/compile/three/: README.md  package.json
p3dbench/data/: __init__.py  full_builder.py  loader.py  prepare.py  raw_loaders.py  schema.py  validate.py
p3dbench/formats/: __init__.py  base.py  cadquery.py  minimal_json.py  openscad.py  threejs.py
p3dbench/metrics/: __init__.py  base.py  geometry.py  judge.py  part.py  topology.py  valid.py
p3dbench/models/: __init__.py  anthropic.py  base.py  gemini.py  openai_compatible.py
p3dbench/render/: __init__.py  blender.py  occ.py  occ_single.py
p3dbench/scripts/: download_data.py
p3dbench/tasks/: __init__.py  assembly_3d.py  base.py  image_to_3d.py  text_to_3d.py
p3dbench/utils/: __init__.py
scripts/: build_demo_data.py  build_full_data.py
tests/: test_part_consistency.py  test_prepare.py  test_qa_bank.py
(+20 files in other folders)
